# boleto-utils

./: .gitignore  Cargo.toml  README.md
boleto-utils/: Cargo.toml
boleto-utils-cli/: Cargo.toml  README.md
boleto-utils-cli/src/: main.rs
boleto-utils/data/: concessionarias-2-saneamento.csv  concessionarias-3-energia-e-gas.csv  concessionarias-6-carnes.csv  concessionarias-7-multas.csv  concessionarias-saneamento.csv
boleto-utils/src/: arrecadacao.rs  builder.rs  cobranca.rs  instituicoes_bancarias.rs  lib.rs  utils.rs
boleto-utils/tests/: builder_test.rs  lib_test.rs
cli/: Cargo.toml
cli/src/: boleto.rs
data/: concessionarias-1-prefeituras.csv  concessionarias-4-telefonia.csv  concessionarias-5-orgaos-governamentais.csv  instituicoes-bancarias.csv  lista-convenios.csv  siscob_itau.doc
src/: arrecadacao.rs  cobranca.rs  concessionarias.rs  instituicoes_bancarias.rs  lib.rs  utils.rs
tests/: lib_test.rs
