[workspace]
members = ["boleto-utils", "boleto-utils-cli"]
default-members = ["boleto-utils", "boleto-utils-cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }

[workspace.package]
authors = ["Fernando Sávio <admin@fsavio.dev>"]
description = "Utility library to parse brazilian payment slip (aka 'boleto') barcodes."
readme = "README.md"
homepage = "https://github.com/fernandosavio/boleto-utils/"
repository = "https://github.com/fernandosavio/boleto-utils/"
license = "MIT"
keywords = ["barcode", "boleto", "codigo-de-barras", "linha-digitavel"]
categories = ["parser-implementations"]