[package]
name = "boleto-utils-cli"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boleto-utils = { workspace = true }

clap = { version = "3.2.22", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"

[[bin]]
path = "src/main.rs"
name = "boleto"
test = true
