[package]
name = "boleto-utils-cli"
version = "0.1.2"
description = "Utility CLI to parse brazilian payment slip (aka 'boleto') barcodes."
readme = "README.md"
keywords = ["boleto", "linha-digitavel", "cli", "utility", "util"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boleto-utils = { path = "../boleto-utils", version = "0.1.1"}

clap = { version = "3.2.22", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"

[[bin]]
path = "src/main.rs"
name = "boleto"
test = true
