
[package]
name = "boleto-utils"
version = "0.1.2"
edition.workspace = true

authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

exclude = [
    "/data/*",
    "/documents/*",
]

[dependencies]
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
csv = "1.2.2"
serde = { workspace = true }
